cmake_minimum_required(VERSION 3.10...3.31)
project(Donut VERSION 0.1.0 LANGUAGES C)
set(APP_ICON_RESOURCE "${CMAKE_CURRENT_SOURCE_DIR}/icons")

add_executable(Donut main.c "${APP_ICON_RESOURCE}/icon.rc")

set(CPACK_GENERATOR NSIS)
set (CPACK_NSIS_MODIFY_PATH "ON")
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)

set(CPACK_PACKAGE_EXECUTABLES ${PROJECT_NAME};Donut)
set(CPACK_CREATE_DESKTOP_LINKS ${PROJECT_NAME})

set(subdir "./bin")
set(CPACK_NSIS_MUI_ICON "${APP_ICON_RESOURCE}\\\\donut.ico")
set(CPACK_NSIS_INSTALLED_ICON_NAME "${subdir}/${PROJECT_NAME}.exe")
set(CPACK_NSIS_MUI_UNICON "${APP_ICON_RESOURCE}\\\\donut.ico")
set(CPACK_PACKAGE_ICON "${APP_ICON_RESOURCE}\\\\black.bmp")
set(CPACK_NSIS_DISPLAY_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}\\\\license.txt") 

set(CPACK_PACKAGE_VENDOR "Narendra Hindwar")


include(CTest)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
